--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <h1>Hello world!</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum tempore
-      commodi laborum possimus molestias iusto necessitatibus harum voluptas
-      magni!
+      commodi laborum possimus molestias iusto necessitat Hello I am from developemnt
     </p>
   </body>
 </html>
